; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_mtxpool.c_mtx_pool_initialize.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_mtxpool.c_mtx_pool_initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtx_pool = type { i32, i32, i32*, i64, i64 }

@POINTER_BITS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mtx_pool*, i8*, i32, i32)* @mtx_pool_initialize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mtx_pool_initialize(%struct.mtx_pool* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.mtx_pool*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.mtx_pool* %0, %struct.mtx_pool** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load %struct.mtx_pool*, %struct.mtx_pool** %5, align 8
  %13 = getelementptr inbounds %struct.mtx_pool, %struct.mtx_pool* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 8
  %14 = load i32, i32* %7, align 4
  %15 = sub nsw i32 %14, 1
  %16 = load %struct.mtx_pool*, %struct.mtx_pool** %5, align 8
  %17 = getelementptr inbounds %struct.mtx_pool, %struct.mtx_pool* %16, i32 0, i32 1
  store i32 %15, i32* %17, align 4
  store i32 1, i32* %9, align 4
  store i32 0, i32* %10, align 4
  br label %18

18:                                               ; preds = %26, %4
  %19 = load i32, i32* %9, align 4
  %20 = load i32, i32* %7, align 4
  %21 = and i32 %19, %20
  %22 = icmp eq i32 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %18
  %24 = load i32, i32* %10, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %10, align 4
  br label %26

26:                                               ; preds = %23
  %27 = load i32, i32* %9, align 4
  %28 = shl i32 %27, 1
  store i32 %28, i32* %9, align 4
  br label %18

29:                                               ; preds = %18
  %30 = load i64, i64* @POINTER_BITS, align 8
  %31 = load i32, i32* %10, align 4
  %32 = sext i32 %31 to i64
  %33 = sub nsw i64 %30, %32
  %34 = load %struct.mtx_pool*, %struct.mtx_pool** %5, align 8
  %35 = getelementptr inbounds %struct.mtx_pool, %struct.mtx_pool* %34, i32 0, i32 4
  store i64 %33, i64* %35, align 8
  %36 = load %struct.mtx_pool*, %struct.mtx_pool** %5, align 8
  %37 = getelementptr inbounds %struct.mtx_pool, %struct.mtx_pool* %36, i32 0, i32 3
  store i64 0, i64* %37, align 8
  store i32 0, i32* %9, align 4
  br label %38

38:                                               ; preds = %52, %29
  %39 = load i32, i32* %9, align 4
  %40 = load i32, i32* %7, align 4
  %41 = icmp slt i32 %39, %40
  br i1 %41, label %42, label %55

42:                                               ; preds = %38
  %43 = load %struct.mtx_pool*, %struct.mtx_pool** %5, align 8
  %44 = getelementptr inbounds %struct.mtx_pool, %struct.mtx_pool* %43, i32 0, i32 2
  %45 = load i32*, i32** %44, align 8
  %46 = load i32, i32* %9, align 4
  %47 = sext i32 %46 to i64
  %48 = getelementptr inbounds i32, i32* %45, i64 %47
  %49 = load i8*, i8** %6, align 8
  %50 = load i32, i32* %8, align 4
  %51 = call i32 @mtx_init(i32* %48, i8* %49, i32* null, i32 %50)
  br label %52

52:                                               ; preds = %42
  %53 = load i32, i32* %9, align 4
  %54 = add nsw i32 %53, 1
  store i32 %54, i32* %9, align 4
  br label %38

55:                                               ; preds = %38
  ret void
}

declare dso_local i32 @mtx_init(i32*, i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
